Request Composition Range Updates for Focused GuestViews based on BrowserPlugins

Since the patch https://codereview.chromium.org/2121953002/ landed, composition
range information are only requested for RenderWidgets which have a focused
text input box, that is, their TextInputState.type != ui::TEXT_INPUT_STATE_NONE.

This change however is not implemented for guest views which are based on
BrowserPlugin and therefore, some IME features in Japanese IME have regressed
for <webview>s. While this is not a bug in OOPIF-based guests, it is still an
important bug to fix because:
  1- PDFs will still use BrowserPlugin for a while,
  2- OOPIF-based <webview>'s might not launch in M60.

This patch will add the support by sending the request after BrowserPluginGuest
forwards a TextInputStateChanged call to RenderWidgetHostViewGuest.

BUG=714771

Review-Url: https://codereview.chromium.org/2929543002
Cr-Commit-Position: refs/heads/master@{#479698}

Former-commit-id: 2c3c487604c90c9ce96fefe0a32f660050f9fe55